--- a/FitBitApi/FitBitApi/Base.lproj/Main.storyboard
+++ b/FitBitApi/FitBitApi/Base.lproj/Main.storyboard
@@ -122,7 +122,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Qh-4r-E5C">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Qh-4r-E5C" customClass="SpinnerView" customModule="FitBitApi" customModuleProvider="target">
                                 <rect key="frame" x="93.5" y="265" width="188.5" height="201"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
@@ -144,6 +144,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="1NV-4h-zjl"/>
                         <connections>
+                            <outlet property="spinnerView" destination="4Qh-4r-E5C" id="mOL-e6-Efc"/>
                             <outlet property="table" destination="Hmq-LL-wt8" id="jq4-wx-0Bz"/>
                         </connections>
                     </view>
