--- a/FitBitApi/FitBitApi/Base.lproj/Main.storyboard
+++ b/FitBitApi/FitBitApi/Base.lproj/Main.storyboard
@@ -34,20 +34,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IEP-mp-5uN">
-                                <rect key="frame" x="126" y="314" width="122" height="38"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IEP-mp-5uN">
+                                <rect key="frame" x="131" y="593" width="113.5" height="30"/>
+                                <color key="backgroundColor" red="0.098039215686274508" green="0.46274509803921571" blue="0.82352941176470584" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="IEP-mp-5uN" secondAttribute="height" multiplier="113:30" id="1Fu-a6-a8x"/>
+                                </constraints>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="OnLoginTap:" destination="8bC-Xf-vdC" eventType="touchUpInside" id="q20-Mn-Ox3"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.36398173395340405" green="0.73174899206783239" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.8901960784313725" green="0.94901960784313721" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="IEP-mp-5uN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="250" id="3cA-1S-lQS"/>
-                            <constraint firstItem="IEP-mp-5uN" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="oAD-Yf-IUc"/>
-                            <constraint firstItem="IEP-mp-5uN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="126" id="qvX-lh-eIW"/>
-                            <constraint firstItem="IEP-mp-5uN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ujo-NU-L26"/>
+                            <constraint firstItem="IEP-mp-5uN" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="PQB-Bj-PIC"/>
+                            <constraint firstItem="IEP-mp-5uN" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.3" constant="1" id="gO2-eg-ms2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="IEP-mp-5uN" secondAttribute="bottom" constant="44" id="yte-Bv-FoF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
