--- a/FitBitApi/FitBitApi/Xib/Category.xib
+++ b/FitBitApi/FitBitApi/Xib/Category.xib
@@ -10,11 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CategoryCell" customModule="FitBitApi" customModuleProvider="target">
-            <connections>
-                <outlet property="lable" destination="KNG-gV-M6i" id="EyO-4m-bEP"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" restorationIdentifier="Category" id="iN0-l3-epB" customClass="CategoryCell" customModule="FitBitApi" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="398" height="56"/>
@@ -22,13 +18,13 @@
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KNG-gV-M6i">
                     <rect key="frame" x="16" y="17.5" width="366" height="21"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.098039215690000001" green="0.46274509800000002" blue="0.82352941180000006" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="KNG-gV-M6i" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="4gB-19-9nV"/>
                 <constraint firstItem="KNG-gV-M6i" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="A12-jp-xm1"/>
@@ -37,7 +33,10 @@
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="156.80000000000001" y="-120.53973013493254"/>
+            <connections>
+                <outlet property="lable" destination="KNG-gV-M6i" id="OEU-a3-2Rj"/>
+            </connections>
+            <point key="canvasLocation" x="-659" y="-136"/>
         </view>
     </objects>
 </document>
