--- a/FitBitApi/FitBitApi/Base.lproj/Main.storyboard
+++ b/FitBitApi/FitBitApi/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N4l-VQ-mkG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-831" y="134"/>
+            <point key="canvasLocation" x="-2105" y="117"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -52,14 +52,25 @@
                                     <action selector="OnLoginTap:" destination="8bC-Xf-vdC" eventType="touchUpInside" id="q20-Mn-Ox3"/>
                                 </connections>
                             </button>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="TZ5-a3-aEh">
+                                <rect key="frame" x="27.5" y="361" width="320" height="216"/>
+                                <date key="date" timeIntervalSinceReferenceDate="563977768.97716296">
+                                    <!--2018-11-15 12:29:28 +0000-->
+                                </date>
+                            </datePicker>
                         </subviews>
                         <color key="backgroundColor" red="0.8901960784313725" green="0.94901960784313721" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="TZ5-a3-aEh" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="JCz-81-And"/>
+                            <constraint firstItem="IEP-mp-5uN" firstAttribute="top" secondItem="TZ5-a3-aEh" secondAttribute="bottom" constant="16" id="Kk1-Nq-nP7"/>
                             <constraint firstItem="IEP-mp-5uN" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="PQB-Bj-PIC"/>
                             <constraint firstItem="IEP-mp-5uN" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.3" constant="1" id="gO2-eg-ms2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="IEP-mp-5uN" secondAttribute="bottom" constant="44" id="yte-Bv-FoF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <connections>
+                            <outlet property="datePicker" destination="TZ5-a3-aEh" id="sU9-Ob-3wD"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" title="About" id="rPr-CB-uSY"/>
                     <connections>
@@ -73,7 +84,7 @@
                     </connections>
                 </customObject>
             </objects>
-            <point key="canvasLocation" x="-174" y="134"/>
+            <point key="canvasLocation" x="-1354" y="116"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="npE-lp-Xi8">
@@ -122,7 +133,7 @@
                     </connections>
                 </customObject>
             </objects>
-            <point key="canvasLocation" x="516" y="134"/>
+            <point key="canvasLocation" x="-615" y="116"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="KgG-Yj-TV5">
@@ -132,30 +143,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Qh-4r-E5C" customClass="SpinnerView" customModule="FitBitApi" customModuleProvider="target">
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Qh-4r-E5C" customClass="SpinnerView" customModule="FitBitApi" customModuleProvider="target">
                                 <rect key="frame" x="93.5" y="265" width="188.5" height="201"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Hmq-LL-wt8">
-                                <rect key="frame" x="0.0" y="32" width="375" height="667"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fZI-2T-kyd">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </tableView>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hDf-Rc-C1Q">
+                                    <size key="itemSize" width="128" height="137"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="5wT-ge-mZj">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="137"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="137"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                        <color key="backgroundColor" red="0.55104889639999999" green="0.76349628309999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="4Qh-4r-E5C" firstAttribute="height" secondItem="Hmq-LL-wt8" secondAttribute="height" multiplier="0.3" constant="1" id="9Dt-q5-qXf"/>
-                            <constraint firstItem="Hmq-LL-wt8" firstAttribute="height" secondItem="Mu2-7B-dYE" secondAttribute="height" id="MHC-ZU-Yda"/>
-                            <constraint firstItem="Hmq-LL-wt8" firstAttribute="width" secondItem="Mu2-7B-dYE" secondAttribute="width" id="SZP-tP-cZv"/>
-                            <constraint firstItem="4Qh-4r-E5C" firstAttribute="width" secondItem="Hmq-LL-wt8" secondAttribute="width" multiplier="0.5" constant="1" id="Wu2-lF-HNg"/>
-                            <constraint firstItem="4Qh-4r-E5C" firstAttribute="centerY" secondItem="Hmq-LL-wt8" secondAttribute="centerY" id="bFF-GZ-dfp"/>
-                            <constraint firstItem="Hmq-LL-wt8" firstAttribute="centerX" secondItem="1NV-4h-zjl" secondAttribute="centerX" id="nEI-GH-qfB"/>
-                            <constraint firstItem="Hmq-LL-wt8" firstAttribute="centerY" secondItem="1NV-4h-zjl" secondAttribute="centerY" id="spJ-e4-JKd"/>
-                            <constraint firstItem="4Qh-4r-E5C" firstAttribute="centerX" secondItem="Hmq-LL-wt8" secondAttribute="centerX" id="vZF-aD-MTo"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="1NV-4h-zjl"/>
                         <connections>
                             <outlet property="spinnerView" destination="4Qh-4r-E5C" id="mOL-e6-Efc"/>
-                            <outlet property="table" destination="Hmq-LL-wt8" id="jq4-wx-0Bz"/>
                         </connections>
                     </view>
                     <navigationItem key="navigationItem" title="Activity" id="n1A-o7-pbC"/>
@@ -167,7 +186,7 @@
                     </connections>
                 </customObject>
             </objects>
-            <point key="canvasLocation" x="1735" y="134"/>
+            <point key="canvasLocation" x="118" y="116"/>
         </scene>
     </scenes>
 </document>
